--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "myapp",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arisuwais/mongo-bread.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/arisuwais/mongo-bread/issues"
+  },
+  "homepage": "https://github.com/arisuwais/mongo-bread#readme",
   "dependencies": {
+    "moment": "^2.23.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -15,5 +29,8 @@
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.4",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
